--- a/examples/multi-tenancy/package.json
+++ b/examples/multi-tenancy/package.json
@@ -74,7 +74,7 @@
     "eslint-plugin-eslint-plugin": "^2.2.1",
     "eslint-plugin-mocha": "^6.3.0",
     "source-map-support": "^0.5.19",
-    "typescript": "~3.9.0-beta"
+    "typescript": "~3.9.1-rc"
   },
   "copyright.owner": "IBM Corp."
 }
