--- a/examples/rest-crud/package.json
+++ b/examples/rest-crud/package.json
@@ -61,7 +61,7 @@
     "eslint-plugin-eslint-plugin": "^2.2.1",
     "eslint-plugin-mocha": "^6.3.0",
     "lodash": "^4.17.15",
-    "typescript": "~3.9.0-beta"
+    "typescript": "~3.9.1-rc"
   },
   "keywords": [
     "loopback",
