--- a/examples/soap-calculator/package.json
+++ b/examples/soap-calculator/package.json
@@ -65,6 +65,6 @@
     "eslint-plugin-mocha": "^6.3.0",
     "mocha": "^7.1.2",
     "source-map-support": "^0.5.19",
-    "typescript": "~3.9.0-beta"
+    "typescript": "~3.9.1-rc"
   }
 }
