--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
     "open-cli": "^6.0.1",
-    "typescript": "~3.9.0-beta"
+    "typescript": "~3.9.1-rc"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
